--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# 27 April 2024
+## Iskander Shamsutdinov
+- Added two main steps in compute provisioning
+
 # 20 April 2024
 ## Iskander Shamsutdinov
 - Added logic for compute creation/deletion
