vault integration to pass variables into ansible playbooks

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+# 11 May 2024
+## Egor Salnikov
+- Added functionality for passing variables
+
+
 # 4 May 2024
 ## Nikita Bagrov and Darya Tolmacheva
 - Deployed Zabbix server and configured it
